Add page structures and content, unordered list for links in index.html

--- a/recipes/chocolate-cake.html
+++ b/recipes/chocolate-cake.html
@@ -9,5 +9,29 @@
 <body>
     <h1>Chocolate Cake</h1>
     <img src="../images/cake.jpg" alt="Chocolate cake">
+    <p>A rich chocolate cake, easy to make! Makes 12 servings, yields a 1 by 9 inch
+        round cake.
+    </p>
+    
+    <ul>
+        <li>14 ounces bittersweet chocolate</li>
+        <li>3 <sup>1</sup>/<sub>3</sub> tablespoons butter</li>
+        <li>4 eggs</li>
+        <li>1 <sup>1</sup>/<sub>2</sub> tablespoons all-purpose flour</li>
+        <li>1 teaspoon water</li>
+    </ul>
+
+    <ol>
+        <li>Preheat oven to 400 degrees F (200 degrees C). 
+            Grease and flour one 9 inch round pan.</li>
+        <li>Bring eggs to room temperature and separate.</li>
+        <li>Melt dark chocolate and butter or margarine over low heat.</li>
+        <li>Beat egg yolks, flour, and water. Add the chocolate mixture. 
+            Beat the egg whites, and fold in the chocolate batter.</li>
+        <li>Pour into prepared pan, and bake for 20 to 30 minutes.</li>
+    </ol>
+    <h2>Nutrition Facts</h2>
+    <p>Per Serving: 238 calories; protein 4.4g; carbohydrates 19.5g; 
+        fat 15.9g; cholesterol 71.9mg; sodium 47.7mg.</p>
 </body>
 </html>
