--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,5 +9,30 @@
 <body>
     <h1>Pesto Pizza</h1>
     <img src="../images/pizza.jpg" alt="Pesto pizza">
+    <p>
+        Pesto pizza! A great alternative to traditional pizza. 
+        Prep time is 10 mins, cook time is 10 mins. Yields 6 servings.
+    </p>
+
+    <ul>
+        <li>1 (12 inch) pre-baked pizza crust</li>
+        <li><sup>1</sup>/<sub>2</sub> cup pesto</li>
+        <li>1 ripe tomato, chopped</li>
+        <li><sup>1</sup>/<sub>2</sub> cup green bell pepper, chopped</li>
+        <li>1 (2 ounce) can chopped black olives, drained</li>
+        <li><sup>1</sup>/<sub>2</sub> small red onion, chopped</li>
+        <li>1 (4 ounce) can artichoke hearts, drained and sliced</li>
+        <li>1 cup crumbled feta cheese</li>
+    </ul>
+
+    <ol>
+        <li>Preheat oven to 450 degrees F (230 degrees C).</li>
+        <li>Spread pesto on pizza crust. Top with tomatoes, 
+            bell peppers, olives, red onions, artichoke hearts and feta cheese.</li>
+        <li>Bake for 8 to 10 minutes, or until cheese is melted and browned.</li>
+    </ol>
+    <h2>Nutrition Facts</h2>
+    <p>Per serving:  394 calories; protein 17.3g; carbohydrates 39.3g; fat 19.9g; 
+        cholesterol 35.6mg; sodium 936.8mg.</p>
 </body>
 </html>
