--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/chocolate-cake.html">Chocolate Cake</a>
-    <a href="./recipes/pizza.html">Pesto Pizza</a>
-    <a href="./recipes/tacos.html">Ranch Chicken Tacos</a>
+    <ol>
+        <li><a href="./recipes/chocolate-cake.html">Chocolate Cake</a></li>
+        <li><a href="./recipes/pizza.html">Pesto Pizza</a></li>
+        <li><a href="./recipes/tacos.html">Ranch Chicken Tacos</a></li>
+    </ol>
 </body>
 </html>
