--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -9,5 +9,53 @@
 <body>
     <h1>Ranch Chicken Tacos</h1>
     <img src="../images/tacos.jpg" alt="Ranch chicken tacos">
+    <p> 
+        A great change from regular Mexican style tacos. 
+        A cool summer dinner, made quick with leftover rotisserie chicken. 
+        Naturally you can use any type of chicken cooked the way you like; 
+        just be sure to shred it for real tacos. 
+    </p>
+    
+    <p>Prep time is 20  mins, cook time is 5 mins. Serves 4.</p>
+
+    <ul>
+        <li><sup>1</sup>/<sub>2</sub> cup ranch dressing</li>
+        <li><sup>1</sup>/<sub>4</sub> cup reduced-fat sour cream</li>
+        <li>1 (1 ounce) packet taco seasoning mix, divided</li>
+        <li>1 tablespoon mild chunky salsa</li>
+        <li>2 cups shredded rotisserie chicken</li>
+        <li>8 (6 inch) corn tortillas</li>
+        <li>shredded lettuce</li>
+        <li>1 tomato, chopped</li>
+        <li>4 green onions, sliced</li>
+        <li>1 (4 ounce) can sliced black olives</li>
+        <li>1 avocado- peeled, pitted, and diced (optional)</li>
+        <li>1 cup shredded Colby-Monterey Jack cheese</li>
+    </ul>
+
+    <ol>
+        <li>
+            Combine ranch dressing, sour cream, 1 teaspoon taco seasoning, 
+            and salsa in a small bowl. Cover and refrigerate until serving.
+        </li>
+        <li>
+            Toss chicken with remaining taco seasoning. Cover bowl loosely with 
+            wax paper or plastic wrap. Microwave chicken until chicken is heated 
+            through, about 2 to 3 minutes.
+        </li>
+        <li>
+            Warm the tortillas in a skillet for about a minute on each side to make 
+            them pliable. Place a scoop of chicken on the tortilla and top with lettuce, 
+            tomato, green onion, olives, avocado, cheese, and a spoonful of the ranch 
+            dressing mixture.
+        </li>
+    </ol>
+
+    <h2>Nutrition Facts</h2>
+    <p>
+        Per serving:  717 calories; protein 30.7g; carbohydrates 40.3g; fat 49g; 
+        cholesterol 101.3mg; sodium 1419mg.
+    </p>
+
 </body>
 </html>
